--- a/index.html
+++ b/index.html
@@ -56,6 +56,101 @@
                 </div>
             </div>
         </section>
+        <!-- section title -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skills-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora deleniti repellendus a atque blanditiis magnam.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skills-description">Maxime reiciendis molestias quibusdam iste quaerat in atque quis ea consequuntur maiores incidunt, illum obcaecati!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node JS</p>
+                    <p class="skills-description">Hic animi vero cum dolorum. Illum dignissimos, esse labore voluptate ducimus ad libero reprehenderit facilis!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">Mongo DB</p>
+                    <p class="skills-description">Neque eos iste numquam porro a sed eum laborum vel fugiat. Quasi, quas iure. Minima.</p>
+                </div>
+            </div>
+        </section>
+        <!-- resume section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+             <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. 
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. 
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. 
+                        </p>
+                    </div>
+                    
+                </div>
+                
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. 
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. 
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. 
+                        </p>
+                    </div>
+                    </div>
+             </div>
+             <div class="resume-botton">
+                <button class="btn-primary">Download CV</button>
+             </div>
+        </section>
     </main>
     <footer>
 
