--- a/index.html
+++ b/index.html
@@ -151,6 +151,31 @@
                 <button class="btn-primary">Download CV</button>
              </div>
         </section>
+        <!-- Contract Section -->
+        <section class="contract">
+            <div>
+                <h3 class="section title">Let's Connect</h3>
+                <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+            </div>
+            <div>
+                <h3 class="section title">Let's Message me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="Email" placeholder="Your email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Massage"></textarea>
+                    <input class="btn-primary" type="submit" name="" id="">
+                </form>
+            </div>
+        </section>
     </main>
     <footer>
 
