--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6b8e36eaad.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 
@@ -28,7 +29,7 @@
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
-                <button class="btn-primary">download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> download CV</button>
             </div>
             <img src="images/hardy.png" alt=" " class="hardy">
         </div>
@@ -148,7 +149,7 @@
                     </div>
              </div>
              <div class="resume-botton">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
              </div>
         </section>
         <!-- Contract Section -->
