--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> download CV</button>
+                <button class="ctn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img src="images/hardy.png" alt=" " class="hardy">
         </div>
